--- a/Server/templates/components.html
+++ b/Server/templates/components.html
@@ -41,18 +41,18 @@
         {%- endmacro %}
 
         {% macro ShowEmail(sender,msg) -%}
-         
-        <div  class="emails" style= "border-left: 5px solid #4285f4; background-color: #eff1f9;   height:90px;
+  
+       <div  class="d" class="OpenBtn" style= "border-left: 5px solid #4285f4; background-color: #eff1f9;   height:90px;
         width: 90%; padding:5px; margin: 20px;" >
 
             <h1 style="font-style:Sans Serif ; font-size: medium;">{{sender}}</h1> 
 
-            <p>{{msg}}</p>
-
+            <p class="hide">{{msg}}</p>
+            
             <button class="OpenBtn">open</button>
 
 
-        </div>
+      </div>
 
 
 
@@ -62,7 +62,7 @@
         <footer class="bg-light text-center text-lg-start">
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-              © 2020 Copyright: KareemYahia & MohammedJabareen
+              © 2022 Copyright: KareemYahia & MohammedJabareen
             </div>
             <!-- Copyright -->
           </footer>
