--- a/Server/flaskServer/templates/components.html
+++ b/Server/flaskServer/templates/components.html
@@ -48,8 +48,9 @@
             <h1 style="font-style:Sans Serif ; font-size: medium;">{{sender}}</h1> 
 
             <p class="hide">{{msg}}</p>
+
+            <button class="HideBtn" onclick="">open</button>
             
-            <button class="HideBtn" onclick="">Hide</button>
 
 
       </div>
