--- a/Server/flaskServer/templates/signup.html
+++ b/Server/flaskServer/templates/signup.html
@@ -38,6 +38,7 @@
         <input type="text" id="signup" class="fadeIn second" name="email" placeholder="Email">
         <input type="text" id="password" class="fadeIn third" name="passphrase" placeholder="password">
         <input type="submit" id="signupform" class="fadeIn fourth" value="Sign Up">
+        <div id='loader' class="loader" style="display:none ;"></div>
       </form>
   
       <!-- Remind Passowrd -->
