--- a/Server/flaskServer/static/css/LoginStyle.css
+++ b/Server/flaskServer/static/css/LoginStyle.css
@@ -44,7 +44,7 @@
     padding: 30px;
     width: 50%;
     max-width: 300px;
-    position: relative;
+    position: 70 relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
@@ -58,7 +58,7 @@
     padding: 30px;
     width: 50%;
     max-width: 300px;
-    position: relative;
+    position:70 relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
@@ -270,3 +270,17 @@
     width:60%;
   }
   
+  .loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    margin:0 auto;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
