--- a/Server/flaskServer/templates/components.html
+++ b/Server/flaskServer/templates/components.html
@@ -48,9 +48,10 @@
             <h1 style="font-style:Sans Serif ; font-size: medium;">{{sender}}</h1> 
 
             <p class="hide">{{msg}}</p>
+            <form name="hide">
+            <input type="submit" value="open" id="{{sender}}" class="HideBtn"></button>
+            </form>
 
-            <button class="HideBtn" onclick="">open</button>
-            
 
 
       </div>
