--- a/Server/flaskServer/templates/components.html
+++ b/Server/flaskServer/templates/components.html
@@ -32,7 +32,7 @@
                     <li><a class="dropdown-item" href="#">Settings</a></li>
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    <li><a class="dropdown-item" href="/users/signout">Sign out</a></li>
                   </ul>
                   {%endif%}
                 </div>
