--- a/Server/flaskServer/templates/components.html
+++ b/Server/flaskServer/templates/components.html
@@ -49,7 +49,7 @@
 
             <p class="hide">{{msg}}</p>
             <form name="hide">
-            <input type="submit" value="open" id="{{sender}}" class="HideBtn"></button>
+            <input type="submit" value="open" id="{{sender}}" class='openMail' class="HideBtn"></button>
             </form>
 
 
@@ -64,8 +64,15 @@
         <footer class="bg-light text-center text-lg-start">
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-              © 2022 Copyright: KareemYahia & MohammedJabareen
+              © 2022 Copyright: Kareem Yahia & Mohammed Jabareen
             </div>
             <!-- Copyright -->
           </footer>
           {%- endmacro %}
+
+          {% macro OpenEmail() -%}
+
+              
+    
+            {%- endmacro %}
+  
